# a-Lot-of-Pendulums

./: CMakeLists.txt  LICENSE  Mathematica.nb  README.md  main.cpp  static_fractal.cpp
include/: MyDODEIntegrator.h  MyDoublePendulum.h  MyDoublePendulum.hpp  MyFunctor.h  MyODEIntegrator.h  MyRK4.h  MyRK5.h  MyRK6.h  MyRK7.h  MyRK8.h  MyRKDP45.h  MyRKF45.h  MyRKN.h
include/ODE_Integrators/: MyDODEIntegrator.hpp  MyDRKN.h  MyDRKN.hpp  MyODEIntegrator.h  MyODEIntegrator.hpp  MyRKN.hpp  MySODEIntegrator.h  MySODEIntegrator.hpp
source/: MyDRKN.cpp  MyDoublePendulum.cpp  MyRK5.cpp  MyRK6.cpp  MyRK7.cpp  MyRK8.cpp  MyRKF45.cpp  MyRKN.cpp
source/ODE_Integrators/: MyDRKN.cpp  MyRKN.cpp
tests/check if calculations are fine/: outputFile.txt  test.cpp  test.py
tests/compare_integrators/: compare_integrators.cpp  comparison.py  comparison2.py  outRK4_0.txt  outRK4_1.txt  outRK4_2.txt  outRK4_3.txt  outRK4_4.txt  outRK4_5.txt  outRK5_0.txt  outRK5_1.txt  outRK5_2.txt  outRK5_3.txt  outRK5_4.txt  outRK5_5.txt  outRK6_0.txt  outRK6_1.txt  outRK6_2.txt  outRK6_3.txt  outRK6_4.txt  outRK6_5.txt  outRK7_0.txt  outRK7_1.txt  outRK7_2.txt  outRK7_3.txt  outRK7_4.txt  outRK7_5.txt  outSRK0_0.txt  outSRK0_1.txt  outSRK0_2.txt  outSRK0_3.txt  outSRK0_4.txt  outSRK0_5.txt  outputRK4.txt  outputRK5.txt  outputRK6.txt  outputRK7.txt  outputRK8.txt
tests/static_fractal/: create_img.py  output.csv
